--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,13 @@ src_managed/
 project/boot/
 project/plugins/project/
 
+# local SBT plugins
+.plugins.sbt
+
 # Scala-IDE specific
 .scala_dependencies
 .DS_Store
 
+# IDEA specific
+.idea/
+.idea_modules/
